--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,8 @@ android {
         targetSdkVersion 29
         versionCode 1
         versionName "1.0"
+        buildConfigField "String", "BASE_URL", "\"https://www.omdbapi.com/\""
+        buildConfigField "String", "OMDB_API_KEY", "\"f49e87bd\""
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -25,9 +27,14 @@ android {
     }
 }
 
+androidExtensions {
+    experimental = true
+}
+
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "com.android.support:support-compat:29.0.0"
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.core:core-ktx:1.1.0'
 
@@ -52,6 +59,13 @@ dependencies {
     implementation 'androidx.lifecycle:lifecycle-common-java8:2.2.0-rc03'
     //==== ANDROID LIFECYCLE ====/
 
+    //==== RETROFIT =====/
+    implementation 'com.squareup.retrofit2:retrofit:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-gson:2.6.2'
+    implementation 'com.squareup.retrofit2:converter-scalars:2.6.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
+    //==== RETROFIT =====/
+
     //==== ROOM =====/
     implementation 'androidx.room:room-runtime:2.2.2'
     kapt 'androidx.room:room-compiler:2.2.2'
@@ -65,6 +79,10 @@ dependencies {
     //======= GLIDE =======//
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     //======= GLIDE =======//
+
+    kapt 'com.google.dagger:dagger-compiler:2.25.2'
+    kapt 'com.google.dagger:dagger-android-processor:2.25.2'
+    implementation 'com.google.dagger:dagger-android-support:2.25.2'
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
