--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,14 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    compileOptions {
+        sourceCompatibility = '1.8'
+        targetCompatibility = '1.8'
+    }
+
+    kotlinOptions {
+        jvmTarget = "1.8"
+    }
 }
 
 androidExtensions {
@@ -47,6 +55,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:support-v4:29.0.0'
     implementation 'com.android.support:design:29.0.0'
+
+    implementation "org.jetbrains.anko:anko:$anko_version"
 
     //==== KTX =====/
     implementation 'androidx.core:core-ktx:1.2.0-rc01'
