--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.android.support:support-v4:29.0.0'
     implementation 'com.android.support:design:29.0.0'
+    implementation 'com.facebook.shimmer:shimmer:0.5.0@aar'
 
     implementation "org.jetbrains.anko:anko:$anko_version"
 
